--- a/src/style/aiduat/theme.scss
+++ b/src/style/aiduat/theme.scss
@@ -75,4 +75,5 @@ $black-10: rgba(0, 0, 0, 0.2) !default;
 // ---------------------------
 
 $wishlist-background: $blue;
+$wishlist-background-mobile: $blue;
 $wishlist-color: $white;
